--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "test/googletest"]
 	path = test/googletest
 	url = git@github.com:google/googletest.git
+[submodule "bench/benchmark"]
+	path = bench/benchmark
+	url = git@github.com:google/benchmark.git
