--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "test/googletest"]
 	path = test/googletest
-	url = git@github.com:google/googletest.git
+	url = https://github.com/google/googletest.git
 [submodule "bench/benchmark"]
 	path = bench/benchmark
-	url = git@github.com:google/benchmark.git
+	url = https://github.com/google/benchmark.git
