--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB FILENAMES *.cpp)
 # No debugging and full optimization for benchmark test
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -DNODEBUG")
 
-set(BENCHMARK_ENABLE_TESTING "OFF")
+set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Enable testing of the benchmark library." FORCE)
 set(CMAKE_BUILD_TYPE "Release")
 add_subdirectory(benchmark)
 
