--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,8 @@ add_subdirectory(googletest/googletest)
 
 include_directories(googletest/googletest/include)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2")
+
 file(GLOB FILENAMES *.cpp)
 
 add_executable(run_tests ${FILENAMES})
