--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -DNDEBUG")
 
 add_executable(isop isop.cpp)
 add_executable(npn_enumeration npn_enumeration.cpp)
-add_executable(npn_enumeration_map npn_eumeration_map.cpp)
+add_executable(npn_enumeration_map npn_enumeration_map.cpp)
 add_executable(npn_random npn_random.cpp)
 add_executable(spectral_enumeration spectral_enumeration.cpp)
