Faster spectral classification.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(npn_enumeration npn_enumeration.cpp)
 add_executable(npn_enumeration_map npn_enumeration_map.cpp)
 add_executable(npn_random npn_random.cpp)
 add_executable(spectral_enumeration spectral_enumeration.cpp)
+add_executable(spectral_enumeration_map spectral_enumeration_map.cpp)
