--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,4 +7,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2 -Wall -Wextra")
 file(GLOB FILENAMES *.cpp)
 
 add_executable(run_tests ${FILENAMES})
-target_link_libraries(run_tests gtest)
+target_link_libraries(run_tests gtest kitty)
