--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,12 +6,12 @@ file(GLOB FILENAMES *.cpp)
 
 add_executable(run_tests ${FILENAMES})
 target_link_libraries(run_tests gtest kitty)
-target_compile_options(run_tests PUBLIC -Wall -Wextra -g)
+target_compile_options(run_tests PRIVATE -W -Wall -Wextra -g -O0)
 
 include(CheckCXXCompilerFlag)
 check_cxx_compiler_flag("-ftime-report" HAS_FTIME_REPORT)
 if(HAS_FTIME_REPORT)
   add_executable(run_tests_report ${FILENAMES})
   target_link_libraries(run_tests_report gtest kitty)
-  target_compile_options(run_tests_report PUBLIC -ftime-report)
+  target_compile_options(run_tests_report PRIVATE -ftime-report)
 endif()
