--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -1,8 +1,6 @@
 file(GLOB FILENAMES *.cpp)
 
 # No debugging and optimization for benchmark test
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -DNDEBUG")
-
 set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Enable testing of the benchmark library." FORCE)
 set(CMAKE_BUILD_TYPE "Release")
 add_subdirectory(benchmark)
@@ -14,5 +12,6 @@ foreach(FILENAME ${FILENAMES})
 
   add_executable(${TARGET_NAME} ${FILENAME})
   target_link_libraries(${TARGET_NAME} benchmark kitty)
+  target_compile_options(${TARGET_NAME} PRIVATE -O2 -DNDEBUG)
 endforeach()
 
