--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,10 @@ add_executable(run_tests ${FILENAMES})
 target_link_libraries(run_tests gtest kitty)
 target_compile_options(run_tests PRIVATE -W -Wall -Wextra -g -O0)
 
+if(win32)
+  target_compile_definitions(run_tests PRIVATE GTEST_HAS_TR1_TUPLE=0)
+endif()
+
 include(CheckCXXCompilerFlag)
 check_cxx_compiler_flag("-ftime-report" HAS_FTIME_REPORT)
 if(HAS_FTIME_REPORT)
