--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,11 +6,12 @@ file(GLOB FILENAMES *.cpp)
 
 add_executable(run_tests ${FILENAMES})
 target_link_libraries(run_tests gtest kitty)
-target_compile_options(run_tests PRIVATE -W -Wall -Wextra -g -O0)
 
 if(WIN32)
   target_compile_definitions(run_tests PRIVATE GTEST_HAS_TR1_TUPLE=0)
   target_compile_definitions(run_tests PRIVATE _SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING=0)
+else()
+  target_compile_options(run_tests PRIVATE -W -Wall -Wextra -g -O0)
 endif()
 
 include(CheckCXXCompilerFlag)
