--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,4 +19,4 @@ build:
   project: $(APPVEYOR_BUILD_FOLDER)\$(APPVEYOR_PROJECT_NAME).sln
 
 test_script:
-  - '%APPVEYOR_BUILD_FOLDER%\%CONFIGURATION%\test\run_tests.exe'
+  - '%APPVEYOR_BUILD_FOLDER%\test\%CONFIGURATION%\run_tests.exe'
