--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,9 @@ if (HAS_FCOLOR_DIAGNOSTICS)
 endif()
 
 if (UNIX)
-    add_compile_options(-W -Wall -Werror)
+  add_compile_options(-W -Wall -Werror)
+else()
+  add_compile_options(/EHsc)
 endif()
 
 add_subdirectory(include)
