Flip bit and example.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,3 +14,4 @@ add_example(npn_random npn_random.cpp)
 add_example(spectral_enumeration spectral_enumeration.cpp)
 add_example(spectral_enumeration_file spectral_enumeration_file.cpp)
 add_example(spectral_enumeration_map spectral_enumeration_map.cpp)
+add_example(spectral_enumeration_fuller spectral_enumeration_fuller.cpp)
