--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-      submodules: true
+      with:
+        submodules: true
     - name: Build kitty
       run: |
         mkdir build
