--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -10,6 +10,8 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
+    - name: Check path
+      run: ls "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe"
     - name: Build kitty
       run: |
         mkdir build
