--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -10,19 +10,14 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
-    - name: Check path
-      run: |
-        mkdir build
-        cd build
-        pwd
-    - name: Next
-      run: pwd
+    - name: Create build directory
+      run: mkdir build
+    - name: Run CMake
+      run: cmake -G "Visual Studio 16 2019" -DKITTY_TEST=ON ..
+      working-directory: ./build
     - name: Build kitty
-      run: |
-        mkdir build
-        cd build
-        cmake -G "Visual Studio 16 2019" -DKITTY_TEST=ON ..
-        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" kitty.sln /t:run_tests
+      run: "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" kitty.sln /t:run_tests
+      working-directory: ./build
     - name: Run tests
       run: |
         cd build
