--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -16,7 +16,8 @@ jobs:
       run: cmake -G "Visual Studio 16 2019" -DKITTY_TEST=ON ..
       working-directory: ./build
     - name: Build kitty
-      run: "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" kitty.sln /t:run_tests
+      run: |
+        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" kitty.sln /t:run_tests
       working-directory: ./build
     - name: Run tests
       run: |
