--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,8 +17,9 @@ jobs:
       working-directory: ./build
     - name: Build kitty
       run: |
-        'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe' kitty.sln /t:run_tests
+        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" kitty.sln /t:run_tests
       working-directory: ./build
+      shell: cmd
     - name: Run tests
       run: |
         cd build
