--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(GOOGLETEST_VERSION 1.10.0)
 add_subdirectory(googletest/googletest EXCLUDE_FROM_ALL)
 
 include_directories(googletest/googletest/include)
