disable TFI_test

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Run tests
       run: |
         cd build
-        ./test/run_tests
+        ./test/run_tests --gtest_filter=-TFI_test*
