--- a/.github/workflows/DTIS_project.yml
+++ b/.github/workflows/DTIS_project.yml
@@ -43,7 +43,7 @@ jobs:
      - name: Run tests
        run: |
          cd build
-         ./test/run_tests --gtest_filter=-TFI_test*
+         ./test/run_tests --gtest_filter=TFI_test*
          
   build-windows:
     runs-on: windows-latest
@@ -65,4 +65,4 @@ jobs:
     - name: Run tests
       run: |
         cd build
-        .\test\Debug\run_tests --gtest_filter=-TFI_test*
+        .\test\Debug\run_tests --gtest_filter=TFI_test*
