Add lp_solve library (#3)
* lp solve

* lpsolve/bfp

* automatically building `liblpsolve` as a static library.

* add -lm -ldl options

* testing code for lpsolve usage

* link libraries

* link m dl libraries in lib but not test

* missing target name

* link inside project

* do not link on windows

Co-authored-by: Heinz Riener <heinz.riener@gmail.com>

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(kitty INTERFACE)
 target_include_directories(kitty INTERFACE ${PROJECT_SOURCE_DIR}/include)
+target_link_libraries(kitty INTERFACE liblpsolve)
