--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,4 +15,4 @@ add_example(spectral_enumeration spectral_enumeration.cpp)
 add_example(spectral_enumeration_file spectral_enumeration_file.cpp)
 add_example(spectral_enumeration_map spectral_enumeration_map.cpp)
 add_example(spectral_enumeration_fuller spectral_enumeration_fuller.cpp)
-add_example(sd2 sd2.cpp)
+add_example(sd sd.cpp)
