--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,4 +16,4 @@ add_example(spectral_enumeration_file spectral_enumeration_file.cpp)
 add_example(spectral_enumeration_map spectral_enumeration_map.cpp)
 add_example(spectral_enumeration_fuller spectral_enumeration_fuller.cpp)
 add_example(sd sd.cpp)
-add_example(sd_canonization sd_canonization.cpp)
+add_example(exact_sd_canonization exact_sd_canonization.cpp)
