added examples to calculate the NPN distribution in SD Class.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,4 +16,5 @@ add_example(spectral_enumeration_file spectral_enumeration_file.cpp)
 add_example(spectral_enumeration_map spectral_enumeration_map.cpp)
 add_example(spectral_enumeration_fuller spectral_enumeration_fuller.cpp)
 add_example(sd sd.cpp)
-add_example(npn_distribution npn_distribution.cpp)
+add_example(npn_distribution_3u npn_distribution_3u.cpp)
+add_example(npn_distribution_4u npn_distribution_4u.cpp)
